--- a/bundle-analyzer-report.html
+++ b/bundle-analyzer-report.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>@daydaybigking/my-first-cli - DayDay</title>
+  <title>@zhaohui18755177994/cli</title>
   <style>
 :root {
   --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
